--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build":"cd backend && npm install && cd ../frontend && npm install && npm run build",
-    "start": "node backend/app.js",
+    "start": "node /frontend/build/index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
