User's Profile Image

--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,8 @@ JWT_SECRET_KEY = MyKey
 MONGODB_URI=mongodb+srv://brijesh:brijesh@cluster0.qe9bgqk.mongodb.net/eCommerse?retryWrites=true&w=majority
 PAYPAL_CLIENT_ID=AQBvWh0_gBBfLtI69sAqrWy0_wDVrLpe06FXYvBtBEDa5Jp1pmz9Fw4Otwoi1mUdyWJFQMH5WJWASnuo
 MONGODB_PASSWORD = brijesh
+
+
+cloud_name: 'shoppingmartapp',
+api_key: '965393881938217',
+api_secret: 'bfmnAyaMfki2pYIp6tq01WBXuKw'
