--- a/backend/.env
+++ b/backend/.env
@@ -4,6 +4,6 @@ PAYPAL_CLIENT_ID=AQBvWh0_gBBfLtI69sAqrWy0_wDVrLpe06FXYvBtBEDa5Jp1pmz9Fw4Otwoi1mU
 MONGODB_PASSWORD = brijesh
 
 
-cloud_name: 'shoppingmartapp',
-api_key: '965393881938217',
-api_secret: 'bfmnAyaMfki2pYIp6tq01WBXuKw'
+CLOUD_NAME: 'shoppingmartapp',
+API_KEY: '965393881938217',
+API_SECRET: 'bfmnAyaMfki2pYIp6tq01WBXuKw'
