--- a/backend/.env
+++ b/backend/.env
@@ -7,3 +7,4 @@ MONGODB_PASSWORD = brijesh
 CLOUD_NAME: 'shoppingmartapp',
 API_KEY: '965393881938217',
 API_SECRET: 'bfmnAyaMfki2pYIp6tq01WBXuKw'
+CLOUDINARY_URL=cloudinary://965393881938217:bfmnAyaMfki2pYIp6tq01WBXuKw@shoppingmartapp
