--- a/backend/.env
+++ b/backend/.env
@@ -3,7 +3,7 @@ MONGODB_URI=mongodb+srv://brijesh:brijesh@cluster0.qe9bgqk.mongodb.net/eCommerse
 PAYPAL_CLIENT_ID=AQBvWh0_gBBfLtI69sAqrWy0_wDVrLpe06FXYvBtBEDa5Jp1pmz9Fw4Otwoi1mUdyWJFQMH5WJWASnuo
 MONGODB_PASSWORD = brijesh
 
-CLOUD_NAME=shoppingmartapp,
-CLOUD_API_KEY=965393881938217,
-CLOUD_API_SECRET=bfmnAyaMfki2pYIp6tq01WBXuKw,
+CLOUDINARY_NAME='shoppingmartapp',
+CLOUDINARY_API_KEY='965393881938217',
+CLOUDINARY_API_SECRET='bfmnAyaMfki2pYIp6tq01WBXuKw',
 CLOUDINARY_URL=cloudinary://965393881938217:bfmnAyaMfki2pYIp6tq01WBXuKw@shoppingmartapp
