--- a/backend/config/.env
+++ b/backend/config/.env
@@ -2,6 +2,8 @@ JWT_SECRET_KEY = MyKey
 MONGODB_URI=mongodb+srv://brijesh:brijesh@cluster0.qe9bgqk.mongodb.net/eCommerse?retryWrites=true&w=majority
 PAYPAL_CLIENT_ID=AQBvWh0_gBBfLtI69sAqrWy0_wDVrLpe06FXYvBtBEDa5Jp1pmz9Fw4Otwoi1mUdyWJFQMH5WJWASnuo
 MONGODB_PASSWORD = brijesh
+JWT_EXPIRE = 1d
+COOKIE_EXPIRE = 5
 
 CLOUDINARY_NAME='shoppingmartapp',
 CLOUDINARY_API_KEY='965393881938217',
